# brabant-water-capstone

./: .gitignore  README.md  data-cleaning-mo copy.ipynb  data-cleaning.ipynb  data-exploration.ipynb  linear_regression_new - full.ipynb  linear_regression_new.ipynb  missing_data.ipynb  model_training.ipynb  random-forrestv1.ipynb  test.ipynb  tpot-test-without-percentage.ipynb  tpot_boston_pipeline.py  tpot_exported_pipeline.py  wiwb_missing_data.xlsx
Xgboost/: adaboost.ipynb  xgboost.ipynb  xgboost.joblib
data/: README.md  neerslag_ai.7z  rucphen_precipitation.parquet  rucphen_precipitation_clean.parquet  rucphen_precipitation_clean_updated.parquet
documentation/: FINAL CHOICE.txt  FINAL ideal beide lag features.txt  FINAL ideal perc prev.txt  FINAL ideal rain cumul.txt  TEMP optuna linear pre lag features.txt  best rf optuna friedman.txt  best rf optuna.txt  best rf van 1-10 1-50.txt  ideal both lag features 20000 trials.txt  ideal lag features FINAL.txt  ideal rain cumul lag features 20000 trials.txt  ideal rain cumul lag features 50000 trials.txt  ideal rain cumul lag features.txt  ideal random forest shuffle.txt  model performance basic.docx  model performance non-shuffle basic.docx  model performance shuffle fixed data LAG.docx  model performance shuffle fixed data.docx  ~$del performance non-shuffle basic.docx  ~$del performance shuffle basic.docx
etl/: etl_all.sh  process_files.py  pyproject.toml
model_dynamic_model/: dynamic_model.ipynb  experiments.ipynb  sairmax gridsearch.ipynb  sairmax.ipynb
neuralnet/: neuralnet.ipynb
pocs/: data_from_poc.ipynb  linear_regression_new (1).ipynb  new_poc.ipynb  pocv2.ipynb
precipitation_per_area/: pyproject.toml  wiwb_neerslag_per_zuiveringseenheid.ipynb  wiwb_neerslag_per_zuiveringseenheid.tex
rolling_average/: rolling_average.ipynb
scalers/: scaler_20231223-161907.pkl  scaler_20240110-150515.pkl  scaler_20240110-173035.pkl  (+2 more)
svm/: pyproject.toml  svm.ipynb  svm.joblib  svm_poc.ipynb  tpot-test copy.ipynb  tpot-test.ipynb  tpot_boston_pipeline.py
to_parquet/: README.md  process_files.py  pyproject.toml  test.ipynb
transformers/: pyproject.toml  time_series_transformers.ipynb  transformer-prediction.ipynb
(+126 files in other folders)
