[tool.poetry]
name = "to-parquet"
version = "0.1.0"
description = ""
authors = ["Teadrinkingprogrammer <teadrinkingprogrammer@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyarrow = "^14.0.1"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
